# Estructura_de_datos

./: CMakeLists.txt  README.md  punteros.c  struct_y_arreglo.c  valor_y_referencia.c
Practica/: listas_enlazadas.c  practica.c  punteros.c  struct.c  struct_01.c
Talleres/: TallerG1.c
Tareas/: tareaG1.c
